# python-royce-bulksms

./: LICENSE  README.md  setup.cfg
src/python_royce_bulksms.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/royce_bulksms/: bulksms.py
