[metadata]
name = python_royce_bulksms
version = 1.0.2
author = Royce Ltd
author_email = developer@roycetechnologies.co.ke
description = Kenya Bulksms gateway to Integrate bulksms into Python project in under 2 minutes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/royceltd/python-royce-bulksms
project_urls =
    Bug Tracker = https://github.com/royceltd/python-royce-bulksms/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src